--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 sqlalchemy==2.0.25
-python-jose[cryptography]==3.3.0
+python-jose==3.3.0
+cryptography==42.0.0
 python-multipart==0.0.6
 pydantic==2.5.3
 email-validator==2.1.0
